# Monitor

./: ANALISE_PROJETO.md  ARQUIVOS_PARA_GITHUB.md  CODESPACES_APK_TUTORIAL.md  CODESPACES_TUTORIAL.md  COLAB_APK_GARANTIDO.md  COLAB_APK_SIMPLES.md  COMANDOS_COLAB_APK.md  COMANDOS_FINAIS_VPS.txt  DOCKER_APK_TUTORIAL.md  Dockerfile  Dockerfile.codespaces  Dockerfile.railway  GUIA_VPS_COMPLETO.md  GUIA_WSL_APK.md  RAILWAY_APK_TUTORIAL.md  README_GITHUB.md  README_TESTE.md  SUBIR_GITHUB.bat  SpyMobile_Colab.ipynb  TODO.md  Tutorial_APK_Colab.ipynb  analisar_projeto_completo.py  analise_comunicacao_app.md  analise_limitacoes.py  atualizar_app_para_vps.py  build-apk.sh  build-apk.yml  build_apk_absoluto_final.sh  build_apk_colab.py  build_apk_final.sh  build_apk_ultra_final.sh  build_apk_vps.sh  cd  codemagic.yaml  colab_apk_generator.py  comandos_vps_apk.txt  comandos_wsl2_simples.txt  conectar_e_configurar_vps.bat  cookies.txt  deploy_apk_vps.sh  (+32 more)
Spy/: Dockerfile  aplicar_melhorias_finais.bat  aplicar_novo_design.bat  atualizar_modelos.bat  corrigir_login.bat  corrigir_senha_definitivo.py  corrigir_sessao.bat  corrigir_templates.py  criar_logo_simples.py  criar_superuser.py  db.sqlite3  debug_login.py  deploy_producao.sh  diagnosticar_login.py  docker-compose.yml  iniciar_sistema.bat  limpar_imeis.py  login_funcionando.bat  login_simples.bat  nginx.conf  (+7 more)
Spy-mobile/: apps_utils.py  buildozer.spec  device_utils.py  gps_utils.py  network_utils.py  pyproject.toml  screenshot_utils.py  social_utils.py
Spy-mobile/calcme/: __main__.py
Spy-mobile/calcme.dist-info/: METADATA
(+29 files in other folders)
